# alya_sma

src/: CMakeLists.txt  alya2pos
src/alya/: Alya.f90  CMakeLists.txt
src/alya-ann/: CMakeLists.txt  mod_ann_framework.f90  mod_ann_scaling.f90
src/alya-arguments/: CMakeLists.txt  mod_arguments.f90
src/alya-comm/: CMakeLists.txt  def_communications.f90  mod_comm_basic.f90  mod_communications.f90  mod_communications_global.f90  mod_communications_point_to_point.f90  mod_communications_point_to_point_basic.f90  mod_communications_tools.f90  mod_exchange.f90
src/alya-core/: Begrun.f90  Begste.f90  Begzon.f90  Conblk.f90  Concou.f90  Doiter.f90  Endste.f90  Endtim.f90  Endzon.f90  Iniunk.f90  Interp.f90  Output.f90  Reamod.f90  Redist.f90  Restar.f90  Solmem.f90  Timste.f90  Turnof.f90  Turnon.f90  mod_coupling_driver.f90  mod_moduls.f90
src/alya-coupling/: CMakeLists.txt  def_coupli.f90  mod_interpolation.f90
src/alya-define/: CMakeLists.txt  def_elmtyp.f90  def_extensions.f90  def_kintyp.f90  def_kintyp_basic.f90  def_kintyp_boundary_conditions.f90  def_kintyp_dims.f90  def_kintyp_domain.f90  def_kintyp_functions.f90  def_kintyp_module.f90  def_kintyp_performance.f90  def_kintyp_petsc.f90  def_kintyp_physics.f90  def_kintyp_postprocess.f90  def_kintyp_reset.f90  def_kintyp_solvers.f90  def_master.f90  def_parame.f90  def_solver.f90  def_vector_size.inc  def_vectorization.f90  mod_optional_argument.f90  mod_qp2rp.f90
src/alya-domain/: CMakeLists.txt  def_domain.f90  def_kintyp_mesh.f90  def_kintyp_mesh_basic.f90  def_kintyp_spare_mesh.f90  def_kintyp_witness_mesh.f90  def_meshin.f90  heapsorti1.f90  heapsortri.f90  mod_bouder.f90  mod_element_integration.f90  mod_elmgeo.f90  mod_elmgeo_vector.f90  mod_graphs.f90  mod_integration_rules.f90  mod_kdtree.f90  mod_matrix.f90  mod_periodicity_sequential.f90  mod_streamlines.f90  sortin.f90
src/alya-ecoute/: CMakeLists.txt  mod_ecoute.f90
src/alya-fem/: CMakeLists.txt  def_chebyshev.f90  def_elmgeo.f90  def_isoparametric.f90  def_quadrature.f90  mod_chebyshev.f90  mod_extrapolation.f90  mod_lagrange.f90  mod_quadrature_chebyshev.f90  mod_quadrature_closed.f90  mod_quadrature_gauss.f90  mod_quadrature_trapezoidal.f90
src/alya-files/: CMakeLists.txt  mod_open_close_files.f90  mod_write_files.f90
src/alya-fti/: CMakeLists.txt  mod_alya2fti.f90  mod_fti_config.f90
src/alya-graph/: CMakeLists.txt  mod_graphs_basic.f90
src/alya-htable/: mod_htable.f90
src/alya-info/: CMakeLists.txt
src/alya-interpolation/: CMakeLists.txt  def_interpolation_method.f90  def_search_parall.f90  def_search_strategy.f90
src/alya-io/: CMakeLists.txt  def_inpout.f90  mod_io_config.f90  mod_iofile.f90  mod_iofile_basic.f90  mod_state.f90
src/alya-kermod/: CMakeLists.txt  def_ker_proper.f90  def_kermod.f90  mod_ker_polynomial.f90  mod_ker_regularization.f90  mod_ker_space_time_function.f90
src/alya-kernel/: CMakeLists.txt
src/alya-kernel/adapti/: _adapt_auxMesh.f90  _adapt_lengthRepair.f90  _adapt_swap.f90  def_adapt.f90  mod_adapt.f90  mod_cavity.f90  mod_debugTools.f90  mod_dictionary.f90  mod_edict.f90  mod_hessianReconstruction.f90  mod_meshEdges.f90  mod_meshTopology.f90  mod_metric.f90  mod_metricComputation.f90  mod_numDer.f90  mod_objectiveFun.f90  mod_optimization.f90  mod_out_paraview.f90  mod_quality.f90  mod_smoothing.f90
src/alya-kernel/cminfo/: info_revision.f90
src/alya-live-info/: mod_live_info_config.f90
src/alya-log/: CMakeLists.txt  mod_log.f90
src/alya-maths/: CMakeLists.txt  def_maths.f90  mod_maths.f90  mod_maths_arrays.f90  mod_maths_basic.f90  mod_maths_geometry.f90  mod_maths_solver.f90  mod_maths_sort.f90
src/alya-matrix/: CMakeLists.txt  def_mat.f90  def_mat_blk.f90  def_mat_bnd.f90  def_mat_coo.f90  def_mat_csr.f90  def_mat_den.f90  def_mat_dia.f90  def_mat_ell.f90  def_mat_fmt.f90  def_mat_sky.f90  def_mat_tools.f90  def_mat_tri.f90
src/alya-memory/: CMakeLists.txt  mod_memory_basic.f90  mod_memory_config.f90  mod_memory_tools.f90
src/alya-module-interface/: CMakeLists.txt  mod_module_interface.f90
src/alya-mpio/: CMakeLists.txt  def_mpio.f90  mod_mpio_config.f90
src/alya-options/: CMakeLists.txt  mod_options.f90
src/alya-parall/: CMakeLists.txt  def_kintyp_comm.f90  def_mpi.f90  def_mpi.inc  def_parall.f90  def_spmat.f90  mod_ansi_colors.f90  mod_communication_arrays.f90  mod_memory.f90  mod_memory_parall.f90  mod_memory_physics.f90  mod_memory_spmat.f90  mod_messages.f90  mod_parall.f90  par_finali.f90  runend.f90
src/alya-performance/: def_performance.f90  mod_perf_csv.f90  mod_perf_csv_writer.f90
src/alya-physics/: mod_frivel.f90  mod_physics.f90
src/alya-proper/: CMakeLists.txt  mod_ker_proper.f90  mod_ker_proper_generic.f90
src/alya-random/: CMakeLists.txt  mod_random.f90
src/alya-run/: CMakeLists.txt  mod_run_config.f90
src/alya-search/: CMakeLists.txt  def_maths_bin.f90  def_maths_octbin.f90  def_maths_skdtree.f90  def_maths_tree.f90  def_search_method.f90
src/alya-soldir/: CMakeLists.txt  mod_alya_direct_solver.f90  mod_skyline.f90
src/alya-solver/: CMakeLists.txt  def_all_solvers.f90  def_approx_inv.f90  def_bicgstab.f90  def_cg.f90  def_cholesky.f90  def_dcg.f90  def_direct_solvers.f90  def_gauss_elimination.f90  def_gmres.f90  def_iterative_solvers.f90  def_jacobi.f90  def_linelet.f90  def_lu_factorization.f90  def_minres.f90  def_preconditioners.f90  def_ras.f90  def_richardson.f90  def_solvers.f90  def_sor.f90  def_ssor.f90  mod_driver_solvers.f90
src/alya-std/: mod_std.f90
src/alya-strings/: CMakeLists.txt  mod_strings.f90
src/alya-tab/: mod_interp_tab.f90
src/alya-time/: CMakeLists.txt  cputim.f90
src/alya-utils/: CMakeLists.txt  mod_day_of_week.f90
src/alya-vecmat/: mbmab0.f90  mbmabt.f90  mbmatb.f90  mbvab0.f90  mbvab1.f90  mbvab2.f90  mbvatb.f90  rotmat.f90  vecasi.f90  vecnor.f90  vecpro.f90  vecres.f90  vecuni.f90  veczer.f90
src/alya-wrapper-metis/: CMakeLists.txt  mod_alya2metis.f90
src/alya-wrapper-petsc/: CMakeLists.txt  def_alya2petsc.f90  mod_alya2petsc.f90
src/alya-yaml/: CMakeLists.txt  mod_yaml.f90
src/modules/: CMakeLists.txt
(+5067 files in other folders)
